<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="56dp"
            android:layout_width="match_parent">
            <ImageView
                android:id="@+id/tv_header_title"
                android:layout_width="56dp"
                android:layout_height="50dp"
                android:src="@drawable/logo_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Registration"
                android:textStyle="bold"
                android:layout_marginLeft="40dp"
                android:textSize="22sp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textShortMessage"
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:hint="@string/Name"/>
            <EditText
                android:inputType="textShortMessage"
                android:id="@+id/surnameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/nameET"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:hint="@string/Surname"/>
            <EditText
                android:inputType="date"
                android:id="@+id/dateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/surnameET"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:hint="@string/DateOfBirth"/>
            <Button
                android:id="@+id/setfirstnameBTN"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/dateET"
                android:layout_marginTop="150dp"
                android:text="@string/Set"
                android:background="@drawable/button_default"
                android:textColor="@color/colorPrimary"
                />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>