<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        app:titleTextColor="@color/colorPrimary">
        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_main" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:textSize="22sp"/>
    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/Mail" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_alignTop="@id/mailET"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:ems="10"
                android:hint="@string/Password" />

            <Button
                android:id="@+id/loginBTN"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignTop="@id/passwordET"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:background="@drawable/button_default"
                android:text="@string/Login"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>